alt in source deleted

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 		<main class="main container">
 			<div class="main__hero">
 				<picture>
-					<source srcset="./images/image-hero-mobile.png" media="(max-width: 1349px)" alt="a main is using laptop">
+					<source srcset="./images/image-hero-mobile.png" media="(max-width: 1349px)">
 					
 					<img src="./images/image-hero-desktop.png" alt="a main is using laptop">
 				</picture>
